Compare the attachment 131972 [details] in MSO and LO. MSO have high quality of pictures in the bullet lists. LO reduce it when importing. I have submitted the patch which solve this problem. https://gerrit.libreoffice.org/35592/
Created attachment 132248 [details] comparsion between MSO and LO Screenshot of comparsion the picture how to reproduce: 1. Open the attachment in LO 2. Open "Bullets and Numbering" property from context menu of bullet list 3. Increase size of picture
Vitaliy Anderson committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=df30caea7979235b5d1a6a038133dbac2ef7ecac tdf#106849: don't reduce quality of picture in bullet list. It will be available in 5.4.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Hello Vitaliy, Is this bug fixed? If so, could you please close it as RESOLVED FIXED?