tdf#106849: don't reduce quality of picture in bullet list.

An image saved in cache when NS_ooxml::LN_CT_NumPicBullet_pict
property is processed should not to be resized. It reduce quality
the image.

Just set the property "GraphicSize" of current level of the NumRule
instead of resize the image when processing
NS_ooxml::LN_CT_Lvl_lvlPicBulletId property.

Change-Id: I8ac80643decb7794de7a295cc7c2895a5bd24e2d
Reviewed-on: https://gerrit.libreoffice.org/35592
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>