writerfilter/source/dmapper/NumberingManager.hxx
@@ -51,6 +51,7 @@ class ListLevel : public PropertyMap
     sal_Int16                                     m_nXChFollow;      //LN_IXCHFOLLOW
     OUString                               m_sBulletChar;
     OUString                               m_sGraphicURL;
+    css::awt::Size                         m_aGraphicSize;
     css::uno::Reference<css::graphic::XGraphic> m_sGraphicBitmap;
     sal_Int32                                     m_nTabstop;
     std::shared_ptr< StyleSheetEntry >          m_pParaStyle;
@@ -77,12 +78,15 @@ public:
     void SetValue( Id nId, sal_Int32 nValue );
     void SetBulletChar( const OUString& sValue ) { m_sBulletChar = sValue; };
     void SetGraphicURL( const OUString& sValue ) { m_sGraphicURL = sValue; };
+    void SetGraphicSize( const css::awt::Size& aValue ) { m_aGraphicSize = aValue; };
+
     void SetGraphicBitmap(css::uno::Reference<css::graphic::XGraphic> const& sValue)
         { m_sGraphicBitmap = sValue; }
     void SetParaStyle( const std::shared_ptr< StyleSheetEntry >& pStyle );
 
     // Getters
     const OUString& GetBulletChar( ) { return m_sBulletChar; };
+    const css::awt::Size& GetGraphicSize( ) { return m_aGraphicSize; };
     const std::shared_ptr< StyleSheetEntry >& GetParaStyle( ) { return m_pParaStyle; };
     bool isOutlineNumbering() const { return m_outline; }
 
